Stop resetting 10 sec timeout in FetchParameters::MakeSynchronous()

Before https://crrev.com/c/657787, FetchParameters::MakeSynchronous() always
calls SetTimeoutInterval(10). So I thought that 10 second is the default timeout
for all synchronous resouce loading.

But this was wrong. The TimeoutInterval of ResourceRequest was not used. After
the CL the value is used for the timeout in SyncLoadContext. But the default
timeout of sync XMLHttpRequest must be infinite. This caused the bug 844268.

To fix this bug, this CL stops resetting 10 sec timeout in MakeSynchronous().

Bug: 844268
Change-Id: I7295ec78637548dc810bb3a8a12a54db4cfbc368
Reviewed-on: https://chromium-review.googlesource.com/1068893
Reviewed-by: Adam Rice <ricea@chromium.org>
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561374}
Former-commit-id: 74fca1c37eb569a296207ff8b9a36b6a07567a1e