third_party/blink/renderer/platform/loader/fetch/fetch_parameters.cc
@@ -118,9 +118,6 @@ void FetchParameters::MakeSynchronous() {
   // Synchronous requests should always be max priority, lest they hang the
   // renderer.
   resource_request_.SetPriority(ResourceLoadPriority::kHighest);
-  if (resource_request_.TimeoutInterval() == INT_MAX) {
-    resource_request_.SetTimeoutInterval(10);
-  }
   // Skip ServiceWorker for synchronous loads from the main thread to avoid
   // deadlocks.
   if (IsMainThread())
